--- a/index.html
+++ b/index.html
@@ -1,141 +1,188 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Заголовок</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
-    <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
+    <title>Walk & Ride: Free Responsive HTML 5 Template</title>
+    <meta name="description" content="A free responsive HTML 5 template with a clean style.">
+    <meta name="keywords" content="free template, html 5, responsive, clean, scss">
+    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/touch/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/touch/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/touch/apple-touch-icon-144x144.png">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="address=no">
+    <link rel="stylesheet" href="css/style.css">
+    <!--[if lt IE 9]>
+        <script src="js/html5.js"></script>
+        <script src="js/respond.js"></script>
+    <![endif]-->
 </head>
 <body class="no-js">
-    <section class="main">
+    <div class="main">
         <header>
             <div class="wrap">
-                <div class="logo">
-                    <a href="/">
-                        <img src="upload/logo.png" width="262" height="52" alt="SPORTHERE, YOUR SPORT DASHBOARD">
-                    </a>
-                </div><!-- logo -->
-                <div class="social">
-                    <ul class="clearfix">
-                        <li><a class="social-facebook" href="#" title="facebook">facebook</a></li>
-                        <li><a class="social-twitter" href="#" title="twitter">twitter</a></li>
-                        <li><a class="social-googleplus" href="#" title="google plus">google plus</a></li>
-                    </ul>
-                </div><!--social -->
-            </div><!-- wrap -->
+                <img src="upload/iphone.png" height="532" width="252" alt="" class="header-img">
+                <div class="header-wrapper">
+                    <h1>Walk &amp; Ride <span>Template</span></h1>
+                    <p>With a smartphone and the right app, you can find any spot on Earth. But the best navigation apps do a lot more. Look out for that speed trap.</p>
+                    <p class="autor"><a href="#">Dan Rowinski</a></p>
+                    <div class="buttons-wrapper">
+                        <a href="#" class="button">Download App</a>
+                        <a href="#" class="button button-stripe">Learn more</a>
+                    </div>
+                </div>
+                <!-- /.header-wrapper -->
+            </div>
+            <!-- /.wrap -->
         </header>
-        <section class="promo">
-            <div class="wrap">
-                <div class="promo-text">
-                    <div class="promo-title">CREATIVITY LANDING PAGE</div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                    <p><a class="promo-button" href="#">BUY NOW</a> &nbsp; <a class="promo-link" href="#">Learn more</a></p>
-                </div><!-- promo-text -->
-                <img src="upload/promo.png" width="333" height="551" alt="">
-            </div><!-- wrap -->
-        </section><!-- promo -->
-        <section class="simple">
-            <div class="wrap">
-                <h1>Clean &amp; Simple landing page for apps websites</h1>
-                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
-eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.</p>
-            </div><!-- wrap -->
-        </section><!-- simple -->
-        <section class="features">
-            <div class="wrap">
-                <div class="features-columns clearfix">
-                    <div class="feature">
-                        <div class="ico-help"></div>
-                        <h4>Easy for user</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit aliquet felis, quis ultrices orci condiment.</p>
-                    </div><!-- feature -->
-                    <div class="feature">
-                        <div class="ico-like"></div>
-                        <h4>Easy for user</h4>
-                        <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum.</p>
-                    </div><!-- feature -->
-                    <div class="feature">
-                        <div class="ico-present"></div>
-                        <h4>Easy for user</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit aliquet felis, quis ultrices orci condiment.</p>
-                    </div><!-- feature -->
-                </div><!-- features-columns -->
-            </div><!-- wrap -->
-        </section><!-- features -->
-        <section class="tabsblock">
-            <div class="wrap">
-                <div class="tab">
-                    <ul class="tabs clearfix">
-                        <li class="active"></li>
-                        <li></li>
-                        <li></li>
-                    </ul><!-- tabs -->
-                    <div class="box visible">
-                        <div class="box-text">
-                            <h3>The easiest way to show off your best apps</h3>
-                            <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit aliquet felis, quis ultrices orci condiment.</p>
+        <div class="spanning">
+            <div class="promo clearfix">
+                <div class="wrap">
+                    <div class="promo-wrapper clearfix">
+                        <div class="promo-column">
+                            <img src="upload/pin.png" height="32" width="24" alt="">
+                            <h5>Places</h5>
+                            <p>Seamlessly empower fully researched growth strategies and interoperable internal sources.</p>
                         </div>
-                        <img src="upload/tabs.png" width="437" height="459" alt="">
-                    </div><!-- box -->
-                    <div class="box">
-                        <div class="box-text">
-                            <h3>The easiest way to show off your best apps</h3>
-                            <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit aliquet felis, quis ultrices orci condiment.</p>
+                        <div class="promo-column">
+                            <img src="upload/settings.png" height="32" width="33" alt="">
+                            <h5>Settings</h5>
+                            <p>Collaboratively administrate turnkey channels whereas virtual e-tailers an other media. </p>
                         </div>
-                        <img src="upload/tabs.png" width="437" height="459" alt="">
-                    </div><!-- box -->
-                    <div class="box">
-                        <div class="box-text">
-                            <h3>The easiest way to show off your best apps</h3>
-                            <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit aliquet felis, quis ultrices orci condiment.</p>
+                        <div class="promo-column">
+                            <img src="upload/easy.png" height="32" width="34" alt="">
+                            <h5>Easy</h5>
+                            <p>Interactively procrastinate high-payoff content without backward-compatible data. </p>
                         </div>
-                        <img src="upload/tabs.png" width="437" height="459" alt="">
-                    </div><!-- box -->
-                </div><!-- tab --> 
-            </div><!-- wrap -->
-        </section><!--  -->
-        <section class="simple">
-            <div class="wrap">
-                <h2>Discover. Give. Impact.</h2>
-                <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-            </div><!-- wrap -->
-        </section><!-- simple -->
-        <section class="subscribe">
-            <div class="wrap">
-                <div class="subscribe-title">Subscribe to our newsletter</div>
-                <div class="subscribe-form clearfix">
-                    <form>
-                        <input type="email" placeholder="Your email adress" class="subscribe-email">
-                        <input type="button" value="Subscribe" class="subscribe-button">
-                    </form>
-                </div><!-- subscribe-form -->
-                <div class="subscribe-note">If you want to recieve monthly updates from us just pop your email inthe box.<br>We think that spam is for jerks. And jerks we are not.</div>
-            </div><!-- wrap -->
-        </section><!-- subscribe -->
-        <footer>
-            <div class="wrap">
-                <div class="logo">
-                    <a href="#">
-                        <img src="upload/logo-min.png" width="64" height="52" alt="SPORTHERE, YOUR SPORT DASHBOARD">
-                    </a>
-                </div><!-- logo -->
-                <div class="istore"><a href="#">Available in Apple Store</a></div>
-                <div class="copy">
-                    <p>Copyright &copy; 2014 <a href="#">Сreativity</a></p>
-                </div><!-- copy -->
-                <div class="social">
-                    <ul class="clearfix">
-                        <li><a class="social-facebook" href="#" title="facebook">facebook</a></li>
-                        <li><a class="social-twitter" href="#" title="twitter">twitter</a></li>
-                        <li><a class="social-googleplus" href="#" title="google plus">google plus</a></li>
-                    </ul>
-                </div><!--social -->
-            </div><!-- wrap -->
-        </footer>
-    </section><!-- main -->
+                        <div class="promo-column">
+                            <img src="upload/saturn.png" height="32" width="32" alt="">
+                            <h5>Global</h5>
+                            <p>Credibly innovate granular internal or "organic" sources whereas high standards in web-readiness. </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.promo clearfix -->
+            <div class="discover clearfix">
+                <div class="wrap">
+                    <div class="discover-content clearfix">
+                        <h2>Discover</h2>
+                        <p>Human rights momentum. World problem solving turmoil, change movements environmental pursue these aspirations initiative donation. Policy dialogue, underprivileged accessibility, asylum visionary, prevention beneficiaries carbon emissions reductions empower.</p>
+                        <div class="discover-button clearfix">
+                            <a href="#" class="button button-download">
+                                <span class="button-download-title">Download for</span>
+                                <span class="button-download-subtitle">Apple iOS</span>
+                            </a>
+                            <a href="#" class="button button-download android">
+                                <span class="button-download-title">Download for</span>
+                                <span class="button-download-subtitle">Android</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="discover-img">
+                        <div class="discover-img-inside"><img src="upload/discover.png" height="486" width="634" alt=""></div>
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.discover clearfix -->
+            <div class="video clearfix">
+                <div class="wrap">
+                    <div class="video-title">Explore. Walk &amp; Ride in action</div>
+                    <div class="video-subtitle">Just try it for yourself</div>
+                    <div class="video-block">
+                       <iframe src="//player.vimeo.com/video/106575373?portrait=0" width="814" height="458" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+                    <div class="video-share-wrapper clearfix">
+                        <ul class="social-list clearfix">
+                            <li class="video-share-title">Share it with your friends:</li>
+                            <li><a href="#" class="social-twitter">via <strong>Twitter</strong></a></li>
+                            <li><a href="#" class="social-facebook">via <strong>Facebook</strong></a></li>
+                            <li><a href="#" class="social-google">via <strong>Google+</strong></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.videos clearfix -->
+            <div class="comments clearfix">
+                <div class="wrap">
+                    <div class="tab">
+                        <div class="box visible">
+                            <h4>People talking about <a href="#">#WalkandRide</a></h4>
+                            <p>Join our #WalkandRide adventure. Meet up in London this Saturday! Spread the word and join us for fun.</p>
+                        </div>
+                        <div class="box">
+                            <h4>Users loving <a href="#">#WalkandRide</a></h4>
+                            <p>Joining this weekend's #WalkandRide fun! @emmy_lemmy bring your dogs, we can make it a fun walk!</p>
+                        </div>
+                        <div class="box">
+                            <h4>Folks enjoying <a href="#">#WalkandRide</a></h4>
+                            <p>Nothing to fear, the new #WalkandRide has my tiny street covered, so cool and such a powerful app.</p>
+                        </div>
+                        <ul class="tabs">
+                            <li class="active"></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <a href="#" class="tab-prev"></a>
+                        <a href="#" class="tab-next"></a>
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.comments clearfix -->
+            <div class="simple clearfix">
+                <div class="wrap">
+                    <div class="simple-content">
+                        <h3>The Simplest UI</h3>
+                        <ul>
+                            <li class="clearfix"><img src="upload/ico1.png" height="32" width="32" alt=""><span>Fastest navigation</span></li>
+                            <li class="clearfix"><img src="upload/ico2.png" height="32" width="32" alt=""><span>Huge number of cities</span></li>
+                            <li class="clearfix"><img src="upload/ico3.png" height="32" width="32" alt=""><span>Only the best routes</span></li>
+                            <li class="clearfix"><img src="upload/ico4.png" height="32" width="32" alt=""><span>Beautiful locations</span></li>
+                            <li class="clearfix"><img src="upload/ico5.png" height="32" width="32" alt=""><span>Cloud sync</span></li>
+                        </ul>
+                    </div>
+                    <div class="simple-img">
+                        <img src="upload/screen.png" height="508" width="587" alt="">
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.simple clearfix -->
+            <div class="newsletter clearfix">
+                <div class="wrap">
+                    <div class="newsletter-title">our newsletter</div>
+                    <div class="newsletter-form clearfix">
+                        <form action="">
+                            <input type="email" placeholder="john@doe.com" class="input-text">
+                            <input type="button" class="button" value="Subscribe">
+                        </form>
+                    </div>
+                    <p>If you want to recieve monthly updates from us just pop your email in the box. We think that spam is for jerks. And we are no jerks.</p>
+                </div>
+                <!-- /.wrap -->
+            </div>
+            <!-- /.newsletter clearfix -->
+        </div>
+        <!-- /.spanning-columns -->
+    </div>
+    <!-- /.main -->
+    <footer>
+        <div class="wrap">
+            <p>&copy; 2014 <strong>Walk &amp; Ride</strong>, All Rights Reserved</p>
+        </div>
+        <!-- /.wrap -->
+    </footer>
     <script src="js/jquery.js"></script>
     <script src="js/library.js"></script>
     <script src="js/script.js"></script>
