--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Walk & Ride: Free Responsive HTML 5 Template</title>
-    <meta name="description" content="A free responsive HTML 5 template with a clean style.">
+    <title>Seriesly XBMC</title>
+    <meta name="description" content="Cliente de Series.ly para enviar videos a XBMC">
     <meta name="keywords" content="free template, html 5, responsive, clean, scss">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/touch/apple-touch-icon-72x72.png">
@@ -30,12 +30,12 @@
             <div class="wrap">
                 <img src="upload/iphone.png" height="532" width="252" alt="" class="header-img">
                 <div class="header-wrapper">
-                    <h1>Walk &amp; Ride <span>Template</span></h1>
-                    <p>With a smartphone and the right app, you can find any spot on Earth. But the best navigation apps do a lot more. Look out for that speed trap.</p>
-                    <p class="autor"><a href="#">Dan Rowinski</a></p>
+                    <h1>Seriesly <span>XBMC</span></h1>
+                    <p></p>
+                    <p class="autor"><a href="#">Adrián Muñoz</a></p>
                     <div class="buttons-wrapper">
-                        <a href="#" class="button">Download App</a>
-                        <a href="#" class="button button-stripe">Learn more</a>
+                        <a href="#" class="button">Muy pronto..</a>
+                        <a href="#promo" class="button button-stripe">Descúbrela</a>
                     </div>
                 </div>
                 <!-- /.header-wrapper -->
@@ -94,12 +94,12 @@
                 <!-- /.wrap -->
             </div>
             <!-- /.discover clearfix -->
-            <div class="video clearfix">
+            <div id="promo" class="video clearfix">
                 <div class="wrap">
-                    <div class="video-title">Explore. Walk &amp; Ride in action</div>
-                    <div class="video-subtitle">Just try it for yourself</div>
+                    <div class="video-title">Tus series y películas en el XBMC al instante</div>
+                    <div class="video-subtitle">Tienes que probarlo</div>
                     <div class="video-block">
-                       <iframe src="//player.vimeo.com/video/106575373?portrait=0" width="814" height="458" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                       <iframe width="853" height="480" src="//www.youtube.com/embed/OC5SRrj-uws" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="video-share-wrapper clearfix">
                         <ul class="social-list clearfix">
