--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="upload/iphone.png" height="532" width="252" alt="" class="header-img">
                 <div class="header-wrapper">
                     <h1>Seriesly <span>XBMC</span></h1>
-                    <p></p>
+                    <p>Con esta app podrás enviar tus series y películas de series.ly a XBMC directamente, sin esperas. Además, también podrás controlar XBMC a través del mando incorporado.</p>
                     <p class="autor"><a href="#">Adrián Muñoz</a></p>
                     <div class="buttons-wrapper">
                         <a href="#" class="button">Muy pronto..</a>
@@ -97,7 +97,6 @@
             <div id="promo" class="video clearfix">
                 <div class="wrap">
                     <div class="video-title">Tus series y películas en el XBMC al instante</div>
-                    <div class="video-subtitle">Tienes que probarlo</div>
                     <div class="video-block">
                        <iframe width="853" height="480" src="//www.youtube.com/embed/OC5SRrj-uws" frameborder="0" allowfullscreen></iframe>
                     </div>
