--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
             <!-- /.discover clearfix -->
             <div id="promo" class="video clearfix">
                 <div class="wrap">
-                    <div class="video-title">Tus series y películas en el XBMC al instante</div>
+                    <div class="video-title">Tus series y películas en XBMC</div>
+                    <div class="video-subtitle">Al instante</div>
                     <div class="video-block">
-                       <iframe width="853" height="480" src="//www.youtube.com/embed/OC5SRrj-uws" frameborder="0" allowfullscreen></iframe>
+                       <iframe width="814" height="458" src="//www.youtube.com/embed/OC5SRrj-uws&hd=1" frameborder="0" allowfullscreen ></iframe>
                     </div>
                     <div class="video-share-wrapper clearfix">
                         <ul class="social-list clearfix">
