--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="main">
         <header>
             <div class="wrap">
-                <img src="upload/iphone.png" height="532" width="252" alt="" class="header-img">
+                <img src="upload/galaxy.png" height="535" width="276" alt="" class="header-img">
                 <div class="header-wrapper">
                     <h1>Seriesly <span>XBMC</span></h1>
                     <p>Con esta app podrás enviar tus series y películas de series.ly a XBMC directamente, sin esperas. Además, también podrás controlar XBMC a través del mando incorporado.</p>
