--- a/index.html
+++ b/index.html
@@ -50,14 +50,7 @@
                     <div class="video-block">
                        <iframe width="814" height="458" src="//www.youtube.com/embed/OC5SRrj-uws&hd=1" frameborder="0" allowfullscreen ></iframe>
                     </div>
-                    <div class="video-share-wrapper clearfix">
-                        <ul class="social-list clearfix">
-                            <li class="video-share-title">Share it with your friends:</li>
-                            <li><a href="#" class="social-twitter">via <strong>Twitter</strong></a></li>
-                            <li><a href="#" class="social-facebook">via <strong>Facebook</strong></a></li>
-                            <li><a href="#" class="social-google">via <strong>Google+</strong></a></li>
-                        </ul>
-                    </div>
+
                 </div>
                 <!-- /.wrap -->
             </div>
@@ -68,7 +61,7 @@
     <!-- /.main -->
     <footer>
         <div class="wrap">
-            <p>&copy; 2014 <strong>Walk &amp; Ride</strong>, All Rights Reserved</p>
+            <p>&copy; 2014 <strong>Adrián Muñoz</strong>, All Rights Reserved</p>
         </div>
         <!-- /.wrap -->
     </footer>
