--- a/index.html
+++ b/index.html
@@ -55,7 +55,24 @@
                 <!-- /.wrap -->
             </div>
             <!-- /.videos clearfix -->
+            <div class="simple clearfix">
+                <div class="wrap">
+                    <div class="simple-content">
+                        <h3>Controlas Tú</h3>
+                        <ul>
+                            <li class="clearfix"><img src="upload/ico1.png" height="32" width="32" alt=""><span>Control remoto de XBMC</span></li>
 
+                            <li class="clearfix"><img src="upload/ico3.png" height="32" width="32" alt=""><span>Rápido y sencillo</span></li>
+                            <li class="clearfix"><img src="upload/ico4.png" height="32" width="32" alt=""><span>Carteles de videos</span></li>
+                            <li class="clearfix"><img src="upload/ico5.png" height="32" width="32" alt=""><span>Sincronizacion con tu cuenta</span></li>
+                        </ul>
+                    </div>
+                    <div class="simple-img">
+                        <img src="upload/pantallas.png" height="508" width="587" alt="">
+                    </div>
+                </div>
+                <!-- /.wrap -->
+            </div>
 
     </div>
     <!-- /.main -->
