--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                             <li class="clearfix"><img src="upload/ico3.png" height="32" width="32" alt=""><span>Rápido y sencillo</span></li>
                             <li class="clearfix"><img src="upload/ico4.png" height="32" width="32" alt=""><span>Carteles de videos</span></li>
-                            <li class="clearfix"><img src="upload/ico5.png" height="32" width="32" alt=""><span>Sincronizacion con tu cuenta</span></li>
+                            <li class="clearfix"><img src="upload/ico5.png" height="32" width="32" alt=""><span>Sincronización con tu cuenta</span></li>
                         </ul>
                     </div>
                     <div class="simple-img">
